--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
     <div class="jumbotron">
       <h1>Flickr</h1>
     </div>
+    <% if current_user %>
+      <%= current_user.username %> | <%= link_to "Sign out", destroy_user_session_path, method: 'delete' %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %>
+    <% end %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
