--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,10 +4,16 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label :avatar, class: 'col-sm-2 control-label'  %>
+    <%= f.file_field :avatar %>
+  </div>
+  <br>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
-  
+
   <div class="field">
     <%= f.label :username %><br />
     <%= f.text_field :username %>
