--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,1 @@
-
-<% if current_user %>
-  <%= render user_images_path(current_user) %>
-<% else %>
-  <h1>blah</h1>
-<% end %>
+<h1>Homepage Before Login</h1>
