add create functionality for new photo

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -2,4 +2,8 @@
 
   <% @images.each do |image|%>
     <p><%= image.title %></p>
+    <p><%= image_tag(image.picture.url(:large)) %></p>
+
   <% end %>
+
+  <%= link_to "Add an Image", new_user_image_path(@user) %>
