--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -2,7 +2,7 @@
 
   <% @images.each do |image|%>
     <p><%= image.title %></p>
-    <p><%= link_to(image_tag(image.picture.url(:large)), user_image_path(@user, image) ) %></p>
+    <p><%= link_to(image_tag(image.picture.url(:medium)), user_image_path(@user, image) ) %></p>
 
   <% end %>
 
