--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @image.title %></h1>
-<%= image_tag @image.picture.url(:medium) %>
+<%= image_tag @image.picture.url(:original) %>
 
 <br>
 
